--- a/main.css
+++ b/main.css
@@ -5,7 +5,36 @@
   /*
   https://search.pstatic.net/sunny/?src=https%3A%2F%2Fi.pinimg.com%2F736x%2F98%2Fa8%2F31%2F98a831978436213437c0025ebeba63d2.jpg
   */
-  
+
+  .container {
+      width: 800px;
+      flex-wrap: wrap;
+      display:flex;
+      justify-content: flex-start;
+      
+  }
+  .product-container {
+      width: 200px;
+      height: 300px;
+      
+      gap: 10px;
+      padding: 10px;
+      margin-bottom: 20px;
+  }
+  .product-card {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: center;
+  }
+  .product-card img {
+      width: 100px;
+      height: 100px;
+  }
+  .product-card button {
+      padding: 5px 10px;
+      margin-top: 10px;
+  }
+
   .selection-top{
     display:flex;
     justify-content: center;
