--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@
   .selection-top{
     display:flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
   }
   
   .logo_text{
@@ -271,4 +271,6 @@
     color: white;
   }
   
+/**/
+
   
