--- a/cart.css
+++ b/cart.css
@@ -19,3 +19,45 @@
     padding: 5px 10px;
     margin-top: 10px;
 }
+
+
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+
+label {
+  font-weight: bold;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+textarea {
+  height: 150px;
+}
+
+button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+.input_delivery{
+    height:100%;
+    width:100%;
+
+}
