--- a/login.css
+++ b/login.css
@@ -38,3 +38,11 @@ body{
     background-color: #6A24FE;
     margin-top: 20px;
 }
+
+#register{
+    color: #fff;
+    font-size: 16px;
+    background-color: #6A24FE;
+    margin-top: 20px;
+}
+
