--- a/login.css
+++ b/login.css
@@ -40,6 +40,12 @@ body{
 }
 
 #register{
+    width: 100%;
+    height: 48px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    margin-bottom: 16px;
+    border-radius: 6px;
     color: #fff;
     font-size: 16px;
     background-color: #6A24FE;
