--- a/main.css
+++ b/main.css
@@ -266,6 +266,16 @@
     color: white;
   }
   
+  /*---searching--*/
+.search_box {
+  text-align: center;
+  margin-top: 30px;
+}
+
+
+.search-top {
+    border:1px solid white;
+  }
 /**/
 
   
