--- a/main.css
+++ b/main.css
@@ -54,6 +54,28 @@
       margin-right: 10px; 
   }
 
+  .order-container {
+    width: 800px;
+    gap: 10px;
+    padding: 10px;
+    margin-bottom: 20px;
+    display: fl;
+  }
+
+  .order-card {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .order-card img {
+    width: 100px;
+    height: 100px;
+    margin-right: 10px; 
+}
+
   .delete-button {
     padding: 5px 10px;
     margin-top: 10px;
